--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Hello jQuery</title>
+  <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
- <h3>Hello jQuery</h3>
+  <h2>Hello jQuery</h2>
+  <div id="content"></div>
 </body>
 <script src="scripts/jquery-3.3.1.js"></script>
 <script src="scripts/script.js"></script>
