--- a/index.html
+++ b/index.html
@@ -1,17 +1,28 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Hello jQuery</title>
-  <link rel="stylesheet" href="styles/style.css">
-</head>
-<body>
-  <h2>Hello jQuery</h2>
-  <div id="content"></div>
-</body>
-<script src="scripts/jquery-3.3.1.js"></script>
-<script src="scripts/script.js"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Hello jQuery</title>
+    <link rel="stylesheet" href="styles/style.css" />
+  </head>
+  <body>
+    <h1>Hello jQuery</h1>
+    <div id="content">
+      <!--filled by jQuery-->
+    </div>
+    <div id="change">
+      <p>This is a <span>paragraph</span>.</p>
+    </div>
+
+    <div id="rect"></div>
+
+    <footer>
+      <small id="message"></small>
+    </footer>
+  </body>
+  <script src="scripts/jquery-3.3.1.js"></script>
+  <script src="scripts/script.js"></script>
 </html>
+<!-- END -->
