--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Hello jQuery</title>
     <link rel="stylesheet" href="styles/style.css" />
@@ -16,10 +19,14 @@
       <p>This is a <span>paragraph</span>.</p>
     </div>
 
+    <button id="btnSlideOut">Slide Out</button>
+    <button id="btnSlideIn">Slide In</button>
+    <button id="btnSlideToggle">Slide Toggle</button>
+    <div><br /></div>
     <div id="rect"></div>
 
     <footer>
-      <small id="message"></small>
+      <small></small>
     </footer>
   </body>
   <script src="scripts/jquery-3.3.1.js"></script>
